--- a/VRChat/64/968964.html
+++ b/VRChat/64/968964.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "RUvH4eEBRox50/k/jg64S7Xkh8pekWI5GCPweThP7nA="></script>
+    "SoLyeTP/kOGlwQPnaa3/Mg0y54bYpXcmGijC0885Njw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【ヘアーアクセサリー】ロングサイドツインテール【３Dモデル】","description":"【商品紹介】\n　\n　unity上でヘッドに取り付けられるヘアーアクセサリーです。\n　ボーンを入れているため、Dynamicboneを使用することで\n　揺らすことができます。\n\n\n【VRchat内でのpedestal使用について】\n\n　非営利での利用のみワールド設置のモデルへの付属が可能です\n\n--------------------\n\nモデルデータ・テクスチャーデータの営利を目的とした再配付・販売は\n改変の有無を問わず禁止します。","url":"https://booth.pm/ja/items/968964","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/4e60aa39-4a63-4661-b1ed-1f656886ab4d/i/968964/eaac0279-d1df-4195-8a81-754dd1be66e0_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="RUvH4eEBRox50/k/jg64S7Xkh8pekWI5GCPweThP7nA="></script>
+    nonce="SoLyeTP/kOGlwQPnaa3/Mg0y54bYpXcmGijC0885Njw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -374,9 +374,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
