--- a/VRChat/67/985267.html
+++ b/VRChat/67/985267.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "35VFrkRn8yAg5SYuaJ+V8yHYHfSKb3dc/1msmHTK31I="></script>
+    "Yd6JkN/iZgWwMf0GTGKXMpYDVCO7FJUrR7AhrfTtuws="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"汎用ケモノ素体モデル（ジト目）","description":"●このモデルについて\n自分のオリジナルキャラクターを作るときにできた副産物です！\nこちらはベースがジト目になっています。\n\n最初に言いますが、ある程度モデルをいじってPMXからVRChatアバターに変換できる人向けです。\n\n高身長に見えて意外と低めの身長なのでサイズ調整などしてお好みの身長にしてみてください。\n\nポリゴン数は5714という驚異的な少なさですが、少しウェイトやポリ割が粗くなってしまっている部分があると思うので気になる方は細分化するといいかもしれません。\n\nMMDのボーン構造ですが変換次第でVRChatでも使えます。\n\nシェイプキーも22個（PMXは46個）収録しているのでまゆとまつげ、瞳、口周りの頂点を動かさなければそのまま使用できます。\nさらに自分でシェイプキーを追加することもできます。\n\nまた、Blendファイルのオブジェクトはミラーモディファイアが適用される前の状態です。\nモデルを出力する際は適用を忘れないように注意してください。\n\nMMDモデル向けにPMXファイルも同梱しているのでモデルコピープラグインなどで材質・剛体・jointをコピーすると楽に作れると思います。\n\nテクスチャも申し訳程度についてます。まっしろ！\nUV展開図も用意しましたが皆さんが使いやすいように自由に改変してもらっても構いません！\nただその場合は付属のテクスチャがちゃんと作動するかは保証できません。\n\n\n●利用について\n・無改造のままモデルやテクスチャなどの再配布・販売を行わない。\n（著作権は放棄していません）\n\n以上のことに同意できるならだれでも使うことができます。\nただしVRChatでペデスタルを配置し、だれでも使えるような状態にすることも再配布に当たるとみてるので無改造のままでは使用できません。\n自作発言も禁止です。\n\n改変やパーツ流用、商用利用、R18などなんでも大丈夫です！\n配信やVtuberとして活動してもOK!\n\nクレジット掲載は必要ないですが掲載してくれるとぼくが喜びます！！！！\nできれば下記のTwitterIDまで乗せてくれると嬉しいなあぁ✨\n\nまた、ぼくに使用したことを伝えてもらえれば宣伝できるかもしれないです！\nTwitter:@latenos_\nより連絡ください！\n質問やバグ報告などあれば同じく連絡欲しいです！\n\n●内容物\nScreenフォルダ\nTextureフォルダ\nUVフォルダ\nReadme.txt\nSotai.blend\nSotai.obj\nSotai.pmx\n\nOBJファイルはただ作っただけなので実際に作業するのはBlendファイルを強く推奨します。","url":"https://booth.pm/ja/items/985267","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"500","highPrice":"1000"},"image":"https://booth.pximg.net/c/620x620/a396d0e8-451f-49ff-9a9d-89660f8ae6cd/i/985267/1336c4b0-e8fa-4a32-95d2-085b99befd6f_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="35VFrkRn8yAg5SYuaJ+V8yHYHfSKb3dc/1msmHTK31I="></script>
+    nonce="Yd6JkN/iZgWwMf0GTGKXMpYDVCO7FJUrR7AhrfTtuws="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -483,9 +483,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
