--- a/VRChat/65/984765.html
+++ b/VRChat/65/984765.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "fj32CjSWmGh7hoHNI6ASDB3HEM5+ymAdm2PovhF7O2Q="></script>
+    "bSnZnXO3v+al0xMG9jZyyndWA/XNsywWZZCVhI+Fcmk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"お布団","description":"お布団です。boothお試しで無料配布します。\nなんにでも活用してもらって大丈夫です。\n三角面724\nマテリアル数2\nfbxです。\n好きな子を寝かせてあげたり、自身が布団となってVRCHATで遊んだりとなんにでもお使いください。\n※このモデルを使用して発生したトラブル、損害等には作者は一切の責任を持ちません。ご了承ください。\n","url":"https://booth.pm/ja/items/984765","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/f705da9e-26cc-49c8-8814-d2354078c930/i/984765/e43dad5d-ea9f-4886-a59a-8cb9f1dc89bf_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="fj32CjSWmGh7hoHNI6ASDB3HEM5+ymAdm2PovhF7O2Q="></script>
+    nonce="bSnZnXO3v+al0xMG9jZyyndWA/XNsywWZZCVhI+Fcmk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -344,9 +344,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
