--- a/VRChat/84/984584.html
+++ b/VRChat/84/984584.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "JJILKDY6AccpiEScjAtz9RC8mSBjptLXcxdvsEZAD0w="></script>
+    "86ms1zlEja9ljvXusbIGRTuw63yp06n3yUy99hE4J4Y="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【ver.1.1】単品販売／ビームとか出そうなアレ【U10bit】","description":"※こちらの商品はU10mk2 ( https://kindergarten21.booth.pm/items/1215303 ) に同梱されています※\n\nビームとかが出そうなアレです。オリジナルです。\nVRChatなどでご利用ください。\n\nボーンでハネ部分と後ろのリングを稼働させられます。\nモデルデータ＆テクスチャのみで、アニメーションとかはありません。\n\n製作者：火事屋","url":"https://booth.pm/ja/items/984584","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/332cfc35-d465-4aa3-b8f3-1233909528cc/i/984584/d4cd1db6-bcdd-4238-beb0-571e0b0feec4_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="JJILKDY6AccpiEScjAtz9RC8mSBjptLXcxdvsEZAD0w="></script>
+    nonce="86ms1zlEja9ljvXusbIGRTuw63yp06n3yUy99hE4J4Y="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -462,9 +462,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
