--- a/VRChat/60/944860.html
+++ b/VRChat/60/944860.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "7KeDc6dUpusYGnpSfy6eYiMQX/eLSft5uXoMMja2Nh4="></script>
+    "jueniNQ0P8aymTSEGGrfGNJmoUJ8FaFczsbVZtoVj1k="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"メロンパン","description":"完成したメロンパンのため、今後バージョンアップする可能性は殆どありません。\nお試し版と通常版の差異は一切ありません。\nキリの悪い価格で申し訳ありません。","url":"https://booth.pm/ja/items/944860","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"160"},"image":"https://booth.pximg.net/c/620x620/398453f0-c317-488e-9f19-c38eb6274343/i/944860/34f40ff7-57c8-45c3-b0eb-44f942f6e6e3_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="7KeDc6dUpusYGnpSfy6eYiMQX/eLSft5uXoMMja2Nh4="></script>
+    nonce="jueniNQ0P8aymTSEGGrfGNJmoUJ8FaFczsbVZtoVj1k="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -554,9 +554,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
