--- a/VRChat/53/983853.html
+++ b/VRChat/53/983853.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "Zyu2q7hvuQzl7X7E+d/wr6gjF3NIstUXyIxOK5rjwt4="></script>
+    "oKV151gb5BSe6/MyT3fcfVQXH/vauLBe/yLhPGZDuIQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オタゴンです / VRChat向け3Dモデル","description":"超大物Vtuberオタゴンさんの真の姿を緻密に造形した3Dモデルです。\nオタゴンYouTubeチャンネル\nhttps://www.youtube.com/channel/UCKDV5VkBRW_41wvspN7ks7g\nオタゴンTwitter\nhttps://twitter.com/otagon_vr\n\n\n・FBXファイル､Standardシェーダー用各テクスチャ､VRChat向け設\n定済みのPrefabを含むunitypackageが同梱されています。\n・目と右爪先のトレイルをオンにするアニメーションが付属します。\n・飛びかかり爪攻撃モーション「オタゴンアタック」のアニメーションが付属します。Emoteとして使用できます。\n\n利用規約\n・本商品を購入した時点で下記に示す利用規約に同意したものとみなします\n・本データを許可なく再配布することを禁止します(VRChat内におけるペデスタルによるものを含む)\n・本データを使用し女性Vtuberと仲良くなることを禁止します\n・0083をゼロゼロハチサンと読むことを禁止します","url":"https://booth.pm/ja/items/983853","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/aa7414fb-c4aa-4710-9c36-eb78e1f7edbb/i/983853/08b56772-29a2-4bf1-ac8b-9411e6954368_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Zyu2q7hvuQzl7X7E+d/wr6gjF3NIstUXyIxOK5rjwt4="></script>
+    nonce="oKV151gb5BSe6/MyT3fcfVQXH/vauLBe/yLhPGZDuIQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -458,9 +458,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
