--- a/VRChat/28/982628.html
+++ b/VRChat/28/982628.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "+60cLWLPf6mQf7j+LqYD3knIu+gVDYR6apMzZmR1w50="></script>
+    "MDs7i6jHAW5n9nOyei2xy4VoP/Gtu2Pm/hyaVvlxxxs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"超フルスクラッチメロンパン_2018","description":"見た目は納得出来ましたが、中のパン生地と味に納得いきませんので、今後もバージョンアップする可能性があります。\n今後は通常版のみマイナーバージョンアップを含む予定です。","url":"https://booth.pm/ja/items/982628","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/398453f0-c317-488e-9f19-c38eb6274343/i/982628/5f5af572-d5a5-4a1a-b533-24017ca33ab8_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="+60cLWLPf6mQf7j+LqYD3knIu+gVDYR6apMzZmR1w50="></script>
+    nonce="MDs7i6jHAW5n9nOyei2xy4VoP/Gtu2Pm/hyaVvlxxxs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -606,9 +606,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
